[package]
name = "blog_os"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.33"
spin = "0.9.8"
volatile = "0.2.6"
x86_64 = "0.14.7"

[dependencies.lazy_static]
version = "1.4.0"
default-features = false
features = ["spin_no_std"]

[[test]]
name = "stack_overflow"
harness = false
